--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,macos
 
-### macOS ###
+### macOS ####
 # General
 .DS_Store
 .AppleDouble
